<resources>
    <string name="app_name">eCrowd</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_profile">My Profile</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="textViewTitle_Login">Login</string>
    <string name="textView_Username_Login">Username</string>
    <string name="TextView_password_login">Password</string>
    <string name="button_login_login">Login</string>
    <string name="button_signup_login">Create Account</string>
    <string name="textView_Title_Home">Hi buddy this is home</string>
    <string name="textView_Title_Signup">SignUp</string>
    <string name="textView_username_signup">Username</string>
    <string name="textView_email_signup">Email</string>
    <string name="textView_confirm_password_signup">Confirm Password</string>
...
    <string name="textView_password_signup">Password</string>
    <string name="button_submit_signup">submit</string>
    <string name="button_have_account_signup">Have Account</string>
    <string name="btn_new_form_home">New Form</string>
    <string name="btn_viewForm_home">View Form</string>
    <string name="btn_sign_out_home">Sign Out</string>
    <string name="btn_submitForm_dynamicFormCreate">Submit Form</string>
    <string name="btn_submitField_dynamicFormCreate">Submit Field</string>
    <string name="text_fieldTitle_dynamicFormCreate">Title of the Item</string>
    <string name="label_addField_dynamicFormCreate">Add Field</string>
    <string name="text_titleSurvey_dynamicFormCreate">Title of the Survey</string>
    <string name="label_title_dynamic_form_create">Create Survey Form</string>
    <string name="btn_createNewForm_Home">+ Survey</string>
    <string name="btn_vieForm_Home">View Form</string>
    <string name="btn_SignOut_Home">SignOut</string>
    <string name="id_listView_tab2">My Surveys</string>
</resources>
...
