...
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <Spinner
            android:id="@+id/spinner_fieldType_dynamicFormCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:layout_below="@+id/text_fieldTitle_dynamicFormCreate"
            android:layout_alignRight="@+id/label_addField_dynamicFormCreate"
            android:layout_alignEnd="@+id/label_addField_dynamicFormCreate" />
...
